<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.updateplease.view.SignupActivity"
  tools:showIn="@layout/activity_signup">

  <EditText
    android:id="@+id/edt_first_name"
    android:layout_width="340dp"
    android:layout_height="39dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:hint="@string/hint_firs_nam"
    android:inputType="textPersonName"
    android:text=""
    android:textColor="@color/black"
    android:textColorHint="@color/hint"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_first_name"
    android:paddingLeft="10dp"/>
  <EditText
    android:id="@+id/edt_last_name"
    android:layout_width="340dp"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:hint="@string/hint_last"
    android:inputType="textPersonName"
    android:text=""
    android:textColor="@color/black"
    android:textColorHint="@color/hint"
    android:paddingLeft="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_last_name"/>
  <EditText
    android:id="@+id/edt_mobile"
    android:layout_width="340dp"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:hint="@string/hint_mobile"
    android:inputType="phone"
    android:text=""
    android:textColor="@color/black"
    android:textColorHint="@color/hint"
    android:paddingLeft="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_mobile"/>
  <EditText
    android:id="@+id/edt_email"
    android:layout_width="340dp"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:hint="@string/hint_email"
    android:inputType="textEmailAddress"
    android:text=""
    android:textColor="@color/black"
    android:textColorHint="@color/hint"
    android:paddingLeft="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_email"/>
  <Button
    android:id="@+id/button_contine"
    android:layout_width="340dp"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/button_shape"
    android:text="@string/btn_continue"
    android:textColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edt_email"
    app:layout_constraintVertical_bias="0.226"/>
  <TextView
    android:id="@+id/txt_first_name"
    android:layout_width="wrap_content"
    android:layout_height="21dp"
    android:layout_marginTop="25dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:text="@string/txt_first_nam"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.050"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:textColor="@color/button_back"
    android:textStyle="bold"/>
  <TextView
    android:id="@+id/txt_last_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:text="@string/txt_last_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.050"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edt_first_name"
    android:textColor="@color/button_back"
    android:textStyle="bold"/>
  <TextView
    android:id="@+id/txt_mobile"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:text="@string/txt_mobile"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.050"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edt_last_name"
    android:textColor="@color/button_back"
    android:textStyle="bold"/>
  <TextView
    android:id="@+id/txt_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:text="@string/txt_email"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.050"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edt_mobile"
    android:textColor="@color/button_back"
    android:textStyle="bold"
    />
</android.support.constraint.ConstraintLayout>
