<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.updateplease.view.AddTaskActivity"
  tools:showIn="@layout/activity_add_task">

  <TextView
    android:id="@+id/txt_who"
    android:layout_width="340dp"
    android:layout_height="39dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:gravity="left|center"
    android:paddingLeft="10dp"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:hint="@string/who"
    android:inputType="textPersonName"
    android:text=""
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    />
  <EditText
    android:id="@+id/edt_first_name"
    android:layout_width="340dp"
    android:layout_height="39dp"
    android:layout_marginTop="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:paddingLeft="10dp"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:hint="@string/txt_first_nam"
    android:inputType="textPersonName"
    android:text=""
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_who"
    app:layout_constraintVertical_bias="0.0"/>
  <EditText
    android:id="@+id/edt_what"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:paddingLeft="10dp"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:hint="@string/what"
    android:inputType="textMultiLine"
    android:lines="4"
    android:text=""
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edt_first_name"
    app:layout_constraintVertical_bias="0.01999998"/>
  <LinearLayout
    android:id="@+id/ll_date"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    android:weightSum="2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edt_what"
    app:layout_constraintVertical_bias="0.01999998"
    >

    <TextView
      android:id="@+id/txt_remaind_from"
      android:layout_width="0dp"
      android:layout_height="39dp"
      android:layout_weight="1"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:layout_marginRight="10dp"
      android:paddingLeft="10dp"
      android:background="@drawable/edittext_bg"
      android:ems="10"
      android:hint="@string/hint_remind_from"
      android:inputType="textPersonName"
      android:text=""
      android:textColor="@color/black"
      android:gravity="left|center"
      />
    <TextView
      android:id="@+id/txt_due_date"
      android:layout_width="0dp"
      android:layout_height="39dp"
      android:layout_weight="1"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:paddingLeft="10dp"
      android:background="@drawable/edittext_bg"
      android:ems="10"
      android:hint="@string/hint_due_date"
      android:inputType="textPersonName"
      android:text=""
      android:textColor="@color/black"
      android:gravity="left|center"
      />


  </LinearLayout>
  <CheckBox
    android:id="@+id/checkbox_repeat_task"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/repeat_task"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.09"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ll_date"
    app:layout_constraintVertical_bias="0.13"/>
  <Button
    android:id="@+id/btn_submit"
    android:layout_width="340dp"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/button_shape"
    android:text="@string/btn_submit"
    android:textColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/checkbox_repeat_task"
    app:layout_constraintVertical_bias="0.23000002"/>
</android.support.constraint.ConstraintLayout>
