<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="290dp"
  android:layout_height="190dp"
  android:layout_gravity="center">

  <TextView
    android:id="@+id/textView"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:text="@string/label_reapeat_task"
    android:textColor="@color/button_back"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.060000002"/>

  <LinearLayout
    android:id="@+id/ll_repeat_weekly"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="12dp"
    android:orientation="horizontal"
    android:visibility="visible"
    android:weightSum="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.055"
    >


    <TextView
      android:id="@+id/textView2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight=".4"
      android:layout_marginLeft="15dp"
      android:gravity="left|center"
      android:text="@string/lbl_repeats"
      />
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center">
      <Spinner
        android:id="@+id/spiner_weekly"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:drawSelectorOnTop="true"
        ></Spinner>


    </LinearLayout>

  </LinearLayout>


  <LinearLayout
    android:id="@+id/ll_repets_days"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:visibility="visible"
    android:weightSum="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ll_repeat_weekly"
    app:layout_constraintVertical_bias="0.055"
    >


    <TextView
      android:id="@+id/textView3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight=".4"
      android:layout_marginLeft="15dp"
      android:gravity="left|center"
      android:text="@string/lbl_repeat_evy"
      />


    <Spinner
      android:id="@+id/spiner_days"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight=".4"
      android:layout_marginRight="5dp"
      android:gravity="right"
      ></Spinner>

    <TextView
      android:id="@+id/txt_weeks"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight=".3"
      android:text="@string/lbl_weeks"
      />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal"
    android:visibility="visible"
    android:weightSum="2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="10dp"
    >

    <TextView
      android:id="@+id/txt_done"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/done_cap"/>

    <TextView
      android:id="@+id/txt_cancel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/cancel"
      />


  </LinearLayout>


</android.support.constraint.ConstraintLayout>
