<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.updateplease.view.LoginActivity"
  tools:showIn="@layout/activity_login"
  android:background="@color/white">

  <ImageView
    android:id="@+id/img_app"
    android:layout_width="103dp"
    android:layout_height="94dp"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/ic_robot"/>
  <TextView
    android:id="@+id/txt_mobile"
    android:layout_width="wrap_content"
    android:layout_height="21dp"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:textColor="@color/button_back"
    app:layout_constraintBottom_toTopOf="@+id/edt_mobile"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.050"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/img_app"
    android:textStyle="bold"
    android:text="@string/txt_mobile"/>
  <EditText
    android:id="@+id/edt_mobile"
    android:layout_width="340dp"
    android:layout_height="39dp"
    android:layout_marginTop="10dp"
    android:paddingLeft="10dp"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:hint="@string/hint_mobile"
    android:inputType="phone"
    android:text=""
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_mobile"/>
  <Button
    android:id="@+id/btn_otp"
    android:layout_width="340dp"
    android:layout_height="40dp"
    android:layout_marginTop="30dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/button_shape"
    android:text="@string/btn_get_otp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edt_mobile"
    app:layout_constraintVertical_bias="0.226"
    android:textColor="@color/white"/>
  <TextView
    android:id="@+id/txt_sign_up"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:text="@string/txt_sign_up"
    android:textColor="@color/button_back"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.90"/>

  <View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/line"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.83"></View>
  <TextView
    android:id="@+id/txt_dont_account"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:padding="8dp"
    android:background="@color/white"
    android:text="@string/dont_have_account"
    android:textColor="@color/dont_have_account"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.85"/>
</android.support.constraint.ConstraintLayout>
