<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.updateplease.view.TaskHomeActivity"
  tools:showIn="@layout/activity_task_home">

  <LinearLayout
    android:id="@+id/ll_header"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="8dp"
    android:padding="5dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="3"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.016"
    >

    <TextView
      android:id="@+id/txt_all"
      android:layout_width="0dp"
      android:layout_height="39dp"
      android:layout_weight="1"
      android:layout_margin="2dp"
      android:paddingLeft="10dp"
      android:background="@drawable/edittext_bg"
      android:drawableRight="@drawable/ic_arrow_drop_down_black_18dp"
      android:gravity="left|center"
      android:text="@string/all"
      android:textColor="@color/black"
      />

    <TextView
      android:id="@+id/txt_from_date"
      android:layout_width="0dp"
      android:layout_height="39dp"
      android:layout_weight="1"
      android:layout_margin="2dp"
      android:background="@drawable/edittext_bg"
      android:gravity="center"
      android:hint="@string/from_date"
      />

    <TextView
      android:id="@+id/txt_to_date"
      android:layout_width="0dp"
      android:layout_height="39dp"
      android:layout_weight="1"
      android:layout_margin="2dp"
      android:background="@drawable/edittext_bg"
      android:gravity="center"
      android:hint="@string/to_date"
      />


  </LinearLayout>
  <android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="16dp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ll_header"
    app:layout_constraintVertical_bias="0.0"/>


</android.support.constraint.ConstraintLayout>
